added lots of ui added proper ui classes added additional drawing methods added styles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.27)
+cmake_minimum_required(VERSION 3.26)
 
 option(CXU_BUILD_TESTS "Build test executable" ON)
-option(BUILD_TESTS "Build test executable" OFF)
+option(BUILD_TESTS "Build tests" OFF) #For cxstructs
 
 project(cxurity CXX)
 set(CMAKE_CXX_STANDARD 23)
@@ -27,6 +27,25 @@ if (NOT EXISTS "${RAYGUI_HEADER}")
             SHOW_PROGRESS)
 endif ()
 
+function(download_file url dest)
+    if(NOT EXISTS "${dest}")
+        message(STATUS "Downloading ${dest} from ${url}")
+        file(DOWNLOAD ${url} ${dest}
+                TIMEOUT 60
+                TLS_VERIFY ON
+                SHOW_PROGRESS)
+    endif()
+endfunction()
+
+set(STYLES_BASE_URL "https://raw.githubusercontent.com/raysan5/raygui/master/examples/styles")
+
+set(STYLE_NAMES jungle candy lavanda cyber terminal ashes bluish dark cherry sunny enefete)
+
+foreach(STYLE_NAME IN LISTS STYLE_NAMES)
+    set(STYLE_URL "${STYLES_BASE_URL}/style_${STYLE_NAME}.h")
+    set(STYLE_HEADER "${CMAKE_BINARY_DIR}/style_${STYLE_NAME}.h")
+    download_file(${STYLE_URL} ${STYLE_HEADER})
+endforeach()
 
 include_directories(${CMAKE_BINARY_DIR})
 
