fully refactored the project into modern cmake subdirectories
further improved header and source structure and includes

added event system to entity
planned out application architecture

--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(gui STATIC ${GUI_FILES})
 
 target_link_libraries(gui PUBLIC raylib)
 
-target_include_directories(gui PUBLIC "${CMAKE_SOURCE_DIR}/src/common")
+target_include_directories(gui PUBLIC "${CMAKE_SOURCE_DIR}/src/include")
