--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,11 @@ else ()
     set(USER_HOME $ENV{HOME})
 endif ()
 
-
 set(Torch_DIR "${USER_HOME}/Documents/Libaries/libtorch/share/cmake/Torch")
 find_package(Torch REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 
+# Fetches easy dependencies
 include(cmake/FetchLibs.cmake)
 
 # Compiler-specific options for static linking
@@ -27,16 +27,12 @@ if (CMAKE_COMPILER_IS_GNUCXX)
 elseif (MSVC)
 endif ()
 
-# Source files
-file(GLOB_RECURSE SRC_FILES "src/main.cpp" "src/entity/*.cpp" "src/entity/*.h" "src/headers/*.cpp" "src/headers/*.h" "src/util/*.h" )
-
-
-
 add_subdirectory(src/ui)
+add_subdirectory(src/app)
+add_subdirectory(src/entity)
 
-add_executable(cxurity ${SRC_FILES})
+add_executable(cxurity "src/main.cpp" )
 
-target_include_directories(cxurity PRIVATE "src/common")
 
 # Comment when compiling the standalone executable
 target_compile_definitions(cxurity PRIVATE CXU_COMPILE_DEBUG)
@@ -45,11 +41,10 @@ target_precompile_headers(cxurity PRIVATE src/headers/pch.h)
 
 # Platform-specific configurations
 if (WIN32)
-    target_link_libraries(cxurity gui Kernel32 cxstructs Psapi Iphlpapi advapi32 dwmapi "${TORCH_LIBRARIES}")
+    target_link_libraries(cxurity gui app entity Kernel32 cxstructs Psapi Iphlpapi advapi32 dwmapi "${TORCH_LIBRARIES}")
 
     #file(GLOB TORCH_DLLS "${TORCH_INSTALL_PREFIX}/lib/*.dll")
     #add_custom_command(TARGET cxurity POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${TORCH_DLLS} ${CMAKE_BINARY_DIR})
-
 elseif (UNIX)
-    target_compile_definitions(cxurity PRIVATE CXU_HOST_SYSTEM_UNIX)
+    target_link_libraries(cxurity gui app data "${TORCH_LIBRARIES}")
 endif ()
