added more ui elements added preemtipe ui layout for overview added back device name and role display

--- a/src/entity/ml/CMakeLists.txt
+++ b/src/entity/ml/CMakeLists.txt
@@ -14,4 +14,4 @@ target_include_directories(ml PUBLIC ${TORCH_INCLUDE_DIRS})
 
 
 #file(GLOB TORCH_DLLS "${TORCH_INSTALL_PREFIX}/lib/*.dll")
-#add_custom_command(TARGET cxurity POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${TORCH_DLLS} ${CMAKE_BINARY_DIR})
+#add_custom_command(TARGET ml POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${TORCH_DLLS} ${CMAKE_BINARY_DIR})
